force-app/main/default/objects/CRM_Comment__c/CRM_Comment__c.object-meta.xml
<CustomObject>
    <label>CRM Comment</label>
    <nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>CRM Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CRM Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>