force-app/main/default/objects/CRM_Comment__c/fields/Comment_Added_By__c.field-meta.xml
<CustomField>
    <fullName>Comment_Added_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Comment Added By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>CRM Comments</relationshipLabel>
    <relationshipName>CRM_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>