force-app/main/default/objects/CRM_Comment__c/fields/Comment_Added_Time__c.field-meta.xml
<CustomField>
    <fullName>Comment_Added_Time__c</fullName>
    <label>Comment Added Time</label>
    <type>DateTime</type>
</CustomField>