force-app/main/default/objects/CRM_Comment__c/fields/Customer_Query__c.field-meta.xml
<CustomField>
    <fullName>Customer_Query__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Query</label>
    <referenceTo>Customer_Query__c</referenceTo>
    <relationshipLabel>CRM Comments</relationshipLabel>
    <relationshipName>CRM_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>